--- a/sorteio/sorteio/src/main/resources/application.properties
+++ b/sorteio/sorteio/src/main/resources/application.properties
@@ -1,6 +1,4 @@
 
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost/sorteiozup?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
-spring.datasource.username=root
-spring.datasource.password=
-spring.jpa.show-sql=true
+spring.profiles.active = dev
+
+
